--- a/index.html
+++ b/index.html
@@ -3,108 +3,129 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="pagestyle.css">
+    <link rel="stylesheet" href="portstyle.css">
 </head>
 <body>
-    <div class="outer">
-        <header>
-
-            <div class="up">
-                <i class="fa-solid fa-house-chimney"></i>
-                <div class="upcorner">
-                    <div class="ani">Anime</div>
-                    <div class="quo">Quotes</div>
-                    <div class="rec">Top Recommendations</div>
-                    <div class="gal">Gallery</div>
+    <div id="pic">
+        <div class="container">
+            <nav>
+                <div class="icons">
+                    <i class="fa-solid fa-k" style="color: rgb(212, 142, 12);"></i>
+                    <i class="fa-solid fa-s"></i>
                 </div>
-            </div>
-            <div class="ques">
-                <h1>What Is Anime?</h1>
-            </div>
-            <div class="exp">
-                <p style="color: aliceblue;">
-                    Anime is a Japanese term for hand-drawn or computer animation. The word is the abbreviated pronunciation of "animation" in Japanese, where this term references all animation. Outside Japan, anime is used to refer specifically to animation from Japan or as a Japanese-disseminated animation style.
-                    <br>
-                    Anime consists of an ideal story-telling mechanism, combining graphic art, characterization, cinematography, and other forms of imaginative and individualistic techniques. The production of anime focuses less on the animation of movement and more on the realism of settings as well as the use of camera effects, including panning, zooming, and angle shots. Being hand-drawn, anime is separated from reality by a crucial gap of fiction that provides an ideal path for escapism that audiences can immerse themselves into with relative ease.
-                </p>
-            </div>
-           <div class="img"></div>
-           <div class="quodiv" style="background-color: rgb(141, 83, 36);">
-            <div class="ques1">
-                <h1>Quotes</h1>
-            </div>
-            <div class="quoexp">
-                <p style="font-size: 25px;">1.“The world isn’t perfect. But it’s there for us, doing the best it can… that’s what makes it so damn beautiful.” — Roy Mustang (Full Metal Alchemist)</p>
-                <br>
-                <p style="margin-top: 10px; font-size: 25px;">2.“You will never be able to love anybody else until you love yourself.” — Lelouch Lamperouge (Code Geass)</p>
-                <br>
-                <p style="margin-top: 10px; font-size: 25px;">3.“The loneliest people are the kindest. The saddest people smile the brightest. The most damaged people are the wisest. All because they don’t wish to see anyone else suffer the way they did.” — Jellal Fernandes (Fairy-tail)</p>
-                <br>
-                <p style="margin-top: 10px; font-size: 25px;">4.“The future belongs to those who believe in the beauty of their dreams.” — Shoyo Hinata (Haikyuu)</p>
-                <br>
-                <p style="margin-top: 10px; font-size: 25px;">5.“Enjoy your life today. Yesterday is gone, and tomorrow might never come.” — Takeshi Yamamoto (Katekyo Hitman Reborn)</p>
-                <br>
+                <ul>
+                    <li><a href="#pic">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="text">
+                <p>Student</p>
+                <h1>Hello Everyone!<br> I am <span>Khushi Saini.</span></h1>
             </div>
         </div>
-        <div class="toprec">
-            <div class="ques2">
-                <h1>Top Recommendations</h1>
-            </div>
-            <div class="recs">
-                <div class="rec1">
-                    <div class="rechead">DEATH NOTE</div>
-                    <div class="recimg1"></div>
-                    <div class="reccont">Light Yagami, a genius high school student discovers a mysterious notebook: the "Death Note", which belonged to the shinigami Ryuk, has the supernatural ability to kill anyone whose name is written in its pages. It involves Light's subsequent attempts to use the Death Note to create a crime-free society, using the alias named "Kira", and the subsequent efforts of an elite Japanese police task force, led by enigmatic detective L, to apprehend him.</div>
+    </div>
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="ac1">
+                    <img src="moon.jpg">
                 </div>
-                <div class="rec2">
-                    <div class="rechead" style="margin-left: 15px;">DEMON SLAYER</div>
-                    <div class="recimg2"></div>
-                    <div class="reccont">A family is attacked by demons and only two members survive- Tanjiro and his sister Nezuko, who is turning into a demon slowly. Tanjiro sets out to become a demon slayer to avenge his family and cure his sister.  </div>
-                </div>
-                <div class="rec3">
-                    <div class="rechead">ATTACK ON TITAN</div>
-                    <div class="recimg3"></div>
-                    <div class="reccont">Set in a post-apocalyptic world where the remains of humanity live behind walls protecting them from giant humanoid Titans, Attack on Titan follows protagonist Eren Yeager, along with friends Mikasa Ackerman and Armin Arlert. Eren joins the elite Survey Corps, a group of soldiers who fight against Titans. It chronicles Eren's journey with the Survey Corps as they fight against the Titans while investigating their origin and history.</div>
-                </div>
-                <div class="rec4">
-                    <div class="rechead" style="margin-left: 15px;">JUJITSU KAISEN</div>
-                    <div class="recimg4"></div>
-                    <div class="reccont">A boy, Yuji Itadori swallows a cursed talisman- the finger of a demon, Ryomen Sukuna- and becomes cursed himself. He enters a shaman's school to be able to locate the demon's other body parts and thus exorcise himself. Jujutsu Sorcerers are people who control the flow of Cursed Energy in their bodies.</div>
-                </div>
-                <div class="rec5">
-                    <div class="rechead">YOUR LIE IN APRIL</div>
-                    <div class="recimg5"></div>
-                    <div class="reccont">Fourteen-year-old piano prodigy Kōsei Arima becomes famous after winning several music competitions. He then loses the ability to perform the piano after his mother's death. The story revolves around his experiences after he meets violinist Kaori Miyazono.</div>
+                <div class="ac2">
+                   <h1> About Me<i class="fa-solid fa-circle-info"></i></h1>
+                   <p class="para">Greetings Everyone! I am Khushi Saini from Roorkee, Uttarakhand.<br> Currently a first year student pursuing Bachelor's of Technology degree in Computer Science and Engineering from College of Engineering Roorkee.<br> Studied at Greenway Modern School, Roorkee.<br>19 years old.<br> Looking forward to learn new things.<br>I like playing badminton and football. As for my hobbies, I like to draw. I think of music as my healer. </p>
+                   <div class="blocks">
+                    <p class="tab-links active" onclick="opentab('skills')">Skills</p>
+                    <p class="tab-links" onclick="opentab('education')">Education</p>
+                    <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                   </div>
+                   <div class="tab-contents activeb" id="skills">
+                    <ul>
+                        <li><span>HTML</span></li>
+                        <li>CSS</li>
+                        <li><span>C</span></li>
+                        <li>Python</li>
+                    </ul>
+                   </div>
+                   <div class="tab-contents" id="education">
+                    <ul>
+                        <li><span>High-School(2020)</span><br>Greenway Modern School<br>96.6%</li>
+                        <li><span>Intermediate(2022)</span><br>Greenway Modern School<br>93.4%</li>
+                        <li><span>B-Tech CSE(2022-2026)</span><br>College of Engineering Roorkee</li>
+                    </ul>
+                   </div>
+                   <div class="tab-contents" id="experience">
+                    <ul>
+                        <li>Working as a Web Developement Intern at <br><span>Oasis Infobyte</span><br>15 July 2023- 15 August 2023. </li>
+                        <li>Working as a Web Developement Intern at <br><span>Lets Grow More</span><br>1 July 2023- 31 July 2023. </li>
+                        <li>Volunteered a National Level Hackathon organised by <br><span>College of Engineering Roorkee</span></li>
+                    </ul>
+                   </div>
                 </div>
             </div>
         </div>
-        <div class="gallery" style="background-color: rgb(141, 83, 36);">
-            <div class="ques3">
-                <h1>Gallery</h1>
-            </div>
-            <div class="galfirst">
-                <div class="pic1"></div>
-                <div class="pic2"></div>
-                <div class="pic3"></div>
-                <div class="pic4"></div>
-            </div>
-            <div class="galsecond">
-                <div class="pic5"></div>
-                <div class="pic6"></div>
-                <div class="pic7"></div>
-                <div class="pic8"></div>
-            </div>
-            <div class="galthird">
-                <div class="pic9"></div>
-                <div class="pic10"></div>
-                <div class="pic11"></div>
-                <div class="pic12"></div>
+    </div>
+    <div id="portfolio">
+        <div class="container">
+            <h1>Portfolio<i class="fa-solid fa-briefcase"></i></h1>
+            <div class="port-list">
+                <div class="work">
+                    <img src="todopic1.png">
+                    <p><span>To-Do List</span><i class="fa-solid fa-table-list fa-beat" style="color: rgb(212, 142, 12);"></i><br>Made using HTML, CSS, Javascript.</p>
+                </div>
+                <div class="work">
+                    <img src="calcupic1.png">
+                    <p><span>Calculator</span><i class="fa-solid fa-calculator fa-beat" style="color: rgb(212, 142, 12);"></i><br>Made using HTML, CSS, Javascript.</p>
+                </div>
+                <div class="work">
+                    <img src="frontp.png">
+                    <p><span>Landing Page</span><i class="fa-regular fa-newspaper fa-beat" style="color: rgb(212, 142, 12);"></i><br>Made using HTML, CSS.</p>
+                </div>
             </div>
         </div>
-    </div>  
-        </header>
-    </div>   
+    </div>
+    <div id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="con-left">
+                    <h1>Contact Me<i class="fa-solid fa-address-book"></i></h1>
+                    <p><i class="fa-regular fa-envelope"></i>xyz@gmail.com</p>
+                    <p><i class="fa-solid fa-phone"></i>9119119119</p>
+                    <div class="iconss">
+                        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                    
+                </div>
+                <div class="con-right">
+                    <form>
+                        <input type="text" name="Name" placeholder="Enter Your Name" required>
+                        <input type="email" name="Email" placeholder="Enter Your Email" required>
+                        <textarea name="Message" rows="5" placeholder="Enter Your Message"></textarea>
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        var tablinks =document.getElementsByClassName("tab-links");
+        var tabcontents =document.getElementsByClassName("tab-contents");
+        function opentab(tabname){
+            for(tablink of tablinks){
+                tablink.classList.remove("active");
+            }
+            for(tabcontent of tabcontents){
+                tabcontent.classList.remove("activeb");
+            }
+            event.currentTarget.classList.add("active");
+            document.getElementById(tabname).classList.add("activeb");
+        }
+    </script>
 </body>
 </html>
